Fix labels on microenvironment legends for both summary and search plots

--- a/public/viz.html
+++ b/public/viz.html
@@ -284,6 +284,7 @@ function refreshCCISummaryChordPlots() {
                             <input type="checkbox" class="filled-in" name="cci_summary_show_all_celltypes" id="cci_summary_show_all_celltypes" onchange="toggleFilterVisibility(this)"/>
                             <span class="outer-filter-nest">Show all cell types</span>
                           </label>
+                          <div class="divider filter-divider"></div>
                           <label>
                             <input type="checkbox" class="filled-in" name="summarymicroenvironmentfilter" id="summarymicroenvironmentfilter" checked onchange="toggleFilterVisibility(this)"/>
                             <span class="outer-filter-nest">By Microenvironment</span>
@@ -598,7 +599,7 @@ function refreshCCISummaryChordPlots() {
                             </span>
                           <div id="cci0_header" hidden></div>
                             <div id="cci0" style="width:1000px"></div>
-                            <div id="cci0_chord" style="width:1000px" hidden></div>
+                            <div id="cci0_chord" style="width:800px" hidden></div>
                         </div>
                       </div>
                     </div>
