--- a/public/viz.html
+++ b/public/viz.html
@@ -908,13 +908,28 @@ function refreshCCISummaryChordPlots() {
             <!--TABS for CellphoneDB inputs-->
             <div id="input-tabs-row">
                 <ul class="tabs center" id="input-tabs">
-                  <li class="tab col s3 blue-text text-darken-4"><a class="active" href="#input-cell-composition">Cell Composition</a></li>
-                  <li class="tab col s3 blue-text text-darken-4"><a href="#input-spatial-micro">Spatial Microenvironments</a></li>
+                  <li class="tab col s3 blue-text text-darken-4"><a class="active" href="#input-spatial-micro">Spatial Microenvironments</a></li>
+                  <li class="tab col s3 blue-text text-darken-4"><a href="#input-cell-composition">Cell Composition</a></li>
                 </ul>
             </div>
             <div class="row center-align" id="cci-display-panel">
               <div class="col s0 m3 l3"></div>
-              <!--Plot 1: cell type composition-->
+              <!--Plot 1: Spatial microenvironments-->
+              <div id="input-spatial-micro" class="input-display col s12 m6 l6">
+                <span id="spme-missing" hidden></span>
+                <span id="spme_title" hidden>Spatial microenvironments</span>
+                <button id="spme_save_button" style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2 input-conf-btn" onclick="downloadAsPDF('spme','spme_title','spme_header')">
+                    <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
+                </button>
+                <span id="spme_help" style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2 input-conf-btn">
+                  <i class="material-icons left tooltipped"
+                      data-tooltip="The plot shows the mapping between cell types and microenvironments specified in the file under the configuration key: 'microenvironments'">info_outline</i>
+                </span>
+                <div id="spme_header" hidden>Cell Type - Microenvironment</div>
+                <div id="spme" style="width:800px;justify-content: center;"></div>
+              </div>
+
+              <!--Plot 2: cell type composition-->
               <div id="input-cell-composition" class="input-display col s12 m6 l6">
                 <span id="ctcomp-missing" hidden></span>
                 <span id="ctcomp_title" hidden>Cell composition</span>
@@ -929,20 +944,7 @@ function refreshCCISummaryChordPlots() {
                 <div id="ctcomp" style="width:1500px;height:700px;justify-content: center;"></div>
               </div>
 
-              <!--Plot 2: Spatial microenvironments-->
-              <div id="input-spatial-micro" class="input-display col s12 m6 l6">
-                <span id="spme-missing" hidden></span>
-                <span id="spme_title" hidden>Spatial microenvironments</span>
-                <button id="spme_save_button" style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2 input-conf-btn" onclick="downloadAsPDF('spme','spme_title','spme_header')">
-                    <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
-                </button>
-                <span id="spme_help" style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2 input-conf-btn">
-                  <i class="material-icons left tooltipped"
-                      data-tooltip="The plot shows the mapping between cell types and microenvironments specified in the file under the configuration key: 'microenvironments'">info_outline</i>
-                </span>
-                <div id="spme_header" hidden>Cell Type - Microenvironment</div>
-                <div id="spme" style="width:800px;justify-content: center;"></div>
-              </div>
+              
               <div class="col s0 m3 l3"></div>
             </div>
           </div>
