Add new logo to cpdbviz

--- a/public/viz.html
+++ b/public/viz.html
@@ -211,7 +211,7 @@ function refreshCCISummaryChordPlots() {
         <div style="padding-right: 30px" class="valign-wrapper right">
           <h8 >Powered by</h8>
           <a href="https://github.com/datasome/cellphonedbviz">
-              <img src="img/cellphonedbviz_logo.png" alt="CellphoneDB Viz logo" width="200" height="43">
+              <img src="img/CellPhoneDBViz-logo-new.png" alt="CellphoneDB Viz logo" width="200" height="43">
           </a>
         </div>
         <br>
@@ -928,7 +928,6 @@ function refreshCCISummaryChordPlots() {
                 <div id="spme_header" hidden>Cell Type - Microenvironment</div>
                 <div id="spme" style="width:800px;justify-content: center;"></div>
               </div>
-
               <!--Plot 2: cell type composition-->
               <div id="input-cell-composition" class="input-display col s12 m6 l6">
                 <span id="ctcomp-missing" hidden></span>
@@ -943,8 +942,6 @@ function refreshCCISummaryChordPlots() {
                 <div id="ctcomp_header" hidden></div>
                 <div id="ctcomp" style="width:1500px;height:700px;justify-content: center;"></div>
               </div>
-
-              
               <div class="col s0 m3 l3"></div>
             </div>
           </div>
@@ -953,7 +950,7 @@ function refreshCCISummaryChordPlots() {
         <div class="valign-wrapper">
           <h8 style="padding-left: 30px">Powered by</h8>
           <a href="https://github.com/datasome/cellphonedbviz">
-              <img src="img/cellphonedbviz_logo.png" alt="CellphoneDB Viz logo" width="200" height="43">
+              <img src="img/CellPhoneDBViz-logo-new.png" alt="CellphoneDB Viz logo" width="200" height="43">
           </a>
         </div>
   </body>
