If using chrome, disable the option to view chord plots
This is due to a bug when using chrome to view chord plots, that causes the entire page to glitch

--- a/public/viz.html
+++ b/public/viz.html
@@ -572,7 +572,7 @@ function refreshCCISummaryChordPlots() {
                   </div>
                 </div>
                 <div id="cci_summary_error" class="container center red-text" style="padding-top: 20px;" hidden></div>
-                <div class="row center-align">
+                <div id="chord-switch-row" class="row center-align">
                   <div class="switch" style="padding-left: 30px;">
                     <label>
                       <span class="black-text text-lighten-10 switch-label">Show heatmaps</span>
