Fix tooltip on search plot
Tooltips now appear relative to dot position as expected, even when scrolling along the x or y axis

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <script type="text/javascript" src="./external/js/jquery-3.2.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script src="/zxtm/piwik2.js"></script>
   </head>
   <body>
   <script>
