--- a/public/viz.html
+++ b/public/viz.html
@@ -35,6 +35,7 @@
         <script type="text/javascript" src="./external/js/pdfkit.standalone.js"></script>
         <script type="text/javascript" src="https://bundle.run/blob-stream@0.1.3"></script>
         <script type="text/javascript" src="./external/js/source.js"></script>
+        <script src="/zxtm/piwik2.js"></script>
   </head>
   <script type="module">
 import generateCellCellInteractionSummaryChordPlot from "./js/chord.js";
